# StarryEngine

./: Makefile  README.md
.github/workflows/: fmt-check.yml
starry_applications/: Cargo.toml  Makefile
starry_applications/src/: lib.rs  main.rs
starry_applications/src/asset_manager/code/: asset_item.rs  asset_item_grid.rs  asset_item_list.rs  mod.rs
starry_client/: Cargo.toml
starry_client/src/: lib.rs  main.rs  window.rs
starry_client/src/base/: color.rs  event.rs  graphicspath.rs  mod.rs  renderer.rs
starry_server/: Cargo.toml
starry_server/src/: config.rs  lib.rs  main.rs  starry.toml
starry_server/src/base/: display.rs  image.rs  mod.rs  rect.rs  window.rs
starry_server/src/core/: compositor.rs  mod.rs  window_manager.rs
starry_server/src/core/input/: inputs.rs  mod.rs
starry_toolkit/: Cargo.toml
starry_toolkit/src/: lib.rs  main.rs
starry_toolkit/src/base/: event.rs  mod.rs  panel.rs  point.rs  rect.rs  vector2.rs
starry_toolkit/src/layout/: grid.rs  list.rs  mod.rs
starry_toolkit/src/traits/: enter.rs  focus.rs  mod.rs  place.rs  text.rs  transform.rs
starry_toolkit/src/util/: mod.rs
starry_toolkit/src/widgets/: image.rs  label.rs  mod.rs
