[package]
name = "starry_apps"
version = "0.1.0"
edition = "2021"
description = "The Applications of Starry Engine"
authors = [ "2447742618 <2447742618@qq.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starry_client = {path = "../starry_client" }
starry_toolkit = {path = "../starry_toolkit" }
starry_server = {path = "../starry_server" }
termios = "0.3"